# bsit-bob

./: .env~  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  Pipfile  README.md  lofty.py  mypy.ini  mypy_integration_test.py  pyproject.toml  pytest-something-specific.sh  run_mypy_tests.py  test_mypy_integration.py  verify_stubs.py
.github/workflows/: python-package.yml
bob/: __init__.py  bacnet.py  core.py  core.pyi  enum.py  enum.pyi  functions.py  introspection.py  multimethods.py  template.py
bob/connections/: __init__.py  air.py  controlsignal.py  electricity.py  light.py  liquid.py  mechanical.py  network.py  occupancy.py  refrigerant.py
bob/externalreference/: __init__.py  bacnet.py  influxdb.py  timeseries.py
bob/producer/: __init__.py  causality.py  g36.py  occupancy.py
bob/properties/: __init__.py  electricity.py  force.py  particulate.py  rate.py  states.py
bob/sensor/: electricity.py  fire.py  flow.py  gas.py  humidity.py  light.py  motion.py  particle.py  pressure.py  security.py  sensor.py  temperature.py
bob/space/: physical.py
doc/: conf.py  connections.md  controllers-and-bacnet.md  equipment.md  examples-from-tests.md  namespaces.md  operators-implementation.md  requirements.txt  subclass.md
doc/_artifacts/: basics_ahu_from_class.ttl  basics_ahu_from_yaml.ttl  basics_fan_from_class.ttl  basics_fan_from_yaml.ttl
doc/examples/: ahu_system_from_class.py  fan_device_from_yaml.py  header.py
docs/: basics.md  conf.py  core.md  enum.md  environment.md  equipment.md  externalreferences.md  getting-started.md  index.md  index.rst  installation.md  junctions-and-boundaries.md  properties.md  requirements.txt  schema-graph.md  subclass.md  syntax-operators.md  templates-and-catalog.md
docs/_artifacts/: basics_ahu_from_yaml.ttl  basics_fan_from_class.ttl  basics_fan_from_yaml.ttl  core_minimal.ttl
docs/examples/: ahu_system.yaml  ahu_system_from_yaml.py  core_minimal.py  examples.json  fan_device.yaml  fan_device_from_class.py  fan_device_from_yaml.py
tests/: __init__.py  conftest.py  no-barf.py  no-barf.sh  test__template.py  test_connection-001.py  test_connection-002.py  test_connection-003.py  test_connection-004.py  test_connection-005.py  test_connection-006.py  test_connection-007.py  test_connection-008.py  test_connection-009.py  test_connection-010.py  test_create_from_yaml-001.py  test_create_from_yaml-002.py  test_create_from_yaml-003.py  test_create_from_yaml-004.py  test_dampers.py  test_device-001.py  test_device-002.py  test_device-003.py  test_device-004.py  test_device-005.py  test_device-006.py  test_external_reference.py  test_function-001.py  test_influxdb.py  test_internal_reference.py  test_junction-001.py  test_junction-002.py  test_junction-003.py  test_junction-004.py  test_junction-005.py  test_media.py  test_property-001.py  test_sensor-001.py  test_sensor-002.py  test_spacesandzones-001.py  (+9 more)
tests/ttl/: test_connection-001.ttl  test_connection-002.ttl  test_connection-003.ttl  test_connection-004.ttl  test_connection-005.ttl  test_connection-006.ttl  test_connection-007.ttl  test_connection-008.ttl  test_connection-009.data.ttl  test_connection-009.schema.ttl  test_connection-010.data.ttl  test_connection-010.schema.ttl  test_create_from_yaml-001.ttl  test_create_from_yaml-002.ttl  test_create_from_yaml-003.ttl  test_create_from_yaml-004.ttl  test_create_from_yaml.html  test_create_from_yaml.ttl  test_dampers.ttl  test_device-001.ttl  test_device-002.ttl  test_device-003.ttl  test_device-004.ttl  test_device-005.ttl  test_device-006.ttl  test_device-007.ttl  test_external_reference.ttl  test_function-001.ttl  test_influxdb.ttl  test_internal_reference.ttl  test_junction-001.ttl  test_junction-002.ttl  test_junction-003.ttl  test_junction-004.ttl  test_junction-005.ttl  test_media.data.ttl  test_media.schema.ttl  test_property-001.ttl  test_sensor-001.ttl  test_sensor-002.ttl  (+8 more)
tests/yaml_templates/: ahuAsEquipment.yaml  ahuAsSystem.yaml  equipmentWithJunction.yaml  junction.yaml  vavcontroller.yaml  (+1 more)
tools/: build_docs.py  gen_catalog_docs.py  gen_equipment_docs.py  gen_glossary_from_rdf.py  gen_operator_docs.py  run_examples.py  sync_s223_figures.py  ttl_to_svg.py
topbraid-validate/: .gitignore  README.md  merge-graphs.py  merge-graphs.sh  requirements.txt  validate-build.sh  validate-run.sh  validate.dockerfile  validate.py
(+173 files in other folders)
