[project]
name = "bsit-bob"
version = "0.1.1"
description = "BACnet Semantic Interoperability Toolkit - Bob - Building Model Builder"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "rdflib",
]

[project.optional-dependencies]
templates = ["python-dotenv", "pyyaml>=5.4.1"]
validation = ["pyvis>=0.3.2","click>=8.1.8","python-dotenv"]
tests = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "mypy>=1.17.1",
    "ruff>=0.12.12",
    "pytest-cov>=6.0.0",
    "pytest>=4.6.11",
]

doc =["sphinx",
    "myst_parser",
    "sphinxawesome_theme"
]

[tool.setuptools.packages.find]
include = ["bob*"]
namespaces = false

# [tool.uv.scripts]
# docs-build = { cmd = "sphinx-build docs docs/_build/html" }
# docs-live = { cmd = "sphinx-autobuild docs docs/_build/html --open-browser" }

