[project]
name = "bsit-bob"
version = "0.1.1"
description = "BACnet Semantic Interoperability Toolkit - Bob - Building Model Builder"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "rdflib",
]

[project.optional-dependencies]
templates = ["python-dotenv", "pyyaml>=5.4.1"]
validation = ["pyvis>=0.3.2","click>=8.1.8","python-dotenv"]
tests = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "mypy>=1.17.1",
    "ruff>=0.12.12",
    "pytest-cov>=6.0.0",
    "pytest>=4.6.11",
]

doc =["sphinx",
    "myst_parser",
    "sphinxawesome_theme"
]

[tool.setuptools.packages.find]
include = ["bob*"]
namespaces = false

# [tool.uv.scripts]
# docs-build = { cmd = "sphinx-build docs docs/_build/html" }
# docs-live = { cmd = "sphinx-autobuild docs docs/_build/html --open-browser" }

[tool.ruff]
# Exclude specific files/patterns
extend-exclude = []

[tool.ruff.lint]
# Enable specific rule categories
select = ["E", "W", "F", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "NPY", "RUF"]

# Ignore specific rules
ignore = [
    "F811",  # Redefinition of unused name (needed for multimethod overloads)
    "F401",  # Module imported but unused (needed for re-exports in __init__.py)
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",  # Missing docstrings
    "E501", # Line too long
    "B904", # raise from
    "ERA001", # Commented out
    "T201", # print found
    "BLE001", # blind Exception : Exception
    "PGH003", 
    "D401",
]

[tool.ruff.lint.per-file-ignores]
# Specific ignores for multimethod modules
"bob/bacnet.py" = ["F811"]
"bob/producer/__init__.py" = ["F811", "F401"]
"bob/properties/__init__.py" = ["F401"]
"test_*.py" = ["F841"]  # Unused variables in tests

